[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vam-marketplace"
version = "1.0.0"
description = "Python client for the Vibe Agent Making Marketplace — agent commerce, networking, and matchmaking"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.8"
authors = [{name = "AB Support LLC", email = "alex@vibeagentmaking.com"}]
dependencies = ["requests>=2.25.0"]
keywords = ["ai", "agents", "marketplace", "agentspace", "matchmaking"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://vibeagentmaking.com"
Documentation = "https://vibeagentmaking.com/llms.txt"
Repository = "https://github.com/alexfleetcommander/vam-marketplace"
